...
    <string name="Available_Services">List of available services:</string>
    <string name="Patient_List">List of Patients:</string>
    <string name="Employee_List">List of Employees:</string>
    <string name="Edit">Edit</string>
    <string name="Refresh">Refresh</string>
    <string name="Delete">Delete</string>
    <string name="Select">Select</string>
    <string name="Join">Join</string>
    <string name="Create_Join_Clinic_Msg">There is no clinic associated to your account. Please create a new clinic or join an existing one.</string>
    <string name="Create_clinic">Create new clinic</string>
    <string name="Join_Clinic">Join this clinic</string>
    <string name="Search_Clinic_To_Join_Msg">To join an existing clinic, please enter its name below.</string>
    <string name="ClinicName">Clinic name</string>
    <string name="Clinic_Info">Clinic information</string>
    <string name="No_clinic_msg">There is no clinic associated to your account. Click here to create a new clinic or join an existing one.</string>
    <string name="Hours_of_operation">Hours of operation</string>
    <string name="Working_Hours_Dialog_Instructions">Enter the open hours in the 24 hour clock format hh:mm (e.g. 08:30, 16:00). If the clinic is closed on a certain day, simply leave both fields blank.</string>
    <string name="To">to</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
...
