<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/searchResultsCountMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/searchResultsActionMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/searchResultsPwdEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Password_case_sensitive"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/searchResultsCancelBtn"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:textColor="@android:color/black" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchResultsRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>